--- a/hw_8/helper/media_767.scss
+++ b/hw_8/helper/media_767.scss
@@ -11,80 +11,118 @@
     .basket {
         display: none;
     }
-    
-    .description .description__img {
-        display: none;
+
+    .page__nav {
+        flex-direction: column;
+        gap: 21.6%;
+        justify-content: initial;
+
+        .current__page {
+            width: auto;
+            padding-top: 24px;
+        }
     }
 
-    .description .description__text {
-        padding-top: 0;
-        width: 100%;
-        height: 363px;
-        align-items: center;
-        justify-content: center;
-        gap: 15px;
-    }
-    
-    .description .description__text .main__title .title {
-        font-size: 38px;
-    }
-    
-    .description .description__text .main__title .lux {   
-        font-size: 20px;
-    }
-    
-    .description .description__text .main__title .lux .fashion {
-        font-size: 20px;
+    .sort__filter__items {
+        width: 360px;
+
+        .filter__item {
+            .filter {
+                &__summary {
+                    gap: 0px;
+
+                    .filter__title {
+                        display: none;
+                    }
+
+                    svg {
+                        width: 37.5px;
+                        height: 25px;
+                    }
+                }
+            }
+        }
+
+        .sort {
+            gap: 24px;
+
+            .sort__items {
+                .sort__summary {
+                    font-size: 12px;
+                }
+
+                .sort__item__category {
+                    width: 60px;
+                }
+            }
+
+            .sort__items:first-child {
+                width: 116px;
+            }
+        }
     }
 
-    .description .description__text .rect {
-        height: 61px;
+    .items {        
+        .items__wrap {
+            grid-template-columns: repeat(1, 360px);
+        }
     }
 
-    .products .prod__items .products__little__one {
-        width: 344px;
-        height: 249px;
-    }
-    
-    .products .prod__items .products__little__two {
-        width: 344px;
-        height: 249px;
-    }
-    
-    .products .prod__items .products__little__three {
-        width: 344px;
-        height: 249px;
+    .features__items {
+        gap: 47px;
+
+        .feature:last-child {
+            padding-bottom: 81px;
+        }
     }
 
-    .products .prod__items .products__big {
-        width: 344px;
-        height: 111px;
-        grid-column-start: auto;
-    }
+    .reviews__items {
+        height: 550px;
 
-    .products {
-        padding-left: calc(50% - 172px);
-        padding-right: calc(50% - 172px);
-        margin-bottom: 64px;
-    }
+        .rev__back {
+            height: 550px;
+        }
 
-    .products .prod__items {
-        grid-gap: 32px;
-        grid-template-columns: repeat(1, 1fr);
-    }
+        .rev__item {
+            gap: 59px;
 
-    .featured__items__text {
-        margin-bottom: 65px;
-    }
+            .feedback {
+                .feedback__text {
+                    font-size: 18px;
 
-    .items {
-        padding-left: calc(50% - 180px);
-        padding-right: calc(50% - 180px);
-        margin-bottom: 41px;
-    }
+                    .text__ital {
+                        font-size: 18px;
+                    }
+                }
+            }
 
-    .items__button {
-        margin-bottom: 96px;
+            .subscribe {
+                gap: 22px;
+
+                .review__btn {
+                    width: 341px;
+                    height: 47px;
+
+                    .subscribe__button {
+                        .sub__button {
+                            width: 96px;
+                            height: 47px;
+                        }
+                    }
+                }
+
+                .subscribe__text {
+                    .sub__title {
+                        line-height: 153%;
+                    }
+
+                    .sub__subtitle {
+                        font-size: 14px;
+                        line-height: 153%;
+                    }
+                }
+            }
+        }
     }
 
     .footer__inner {
@@ -92,54 +130,9 @@
         gap: 40px;
         height: 143px;
         justify-content: normal;
-    }
 
-    .reviews__items {
-        height: 550px;
-    }
-
-    .footer__inner .rights {
-        padding-bottom: 9px;
-    }
-
-    .reviews__items .rev__item .subscribe .review__btn {
-        width: 341px;
-        height: 47px;
-    }
-
-    .reviews__items .rev__item .subscribe .review__btn .subscribe__button .sub__button {
-        width: 96px;
-        height: 47px;
-    }
-
-    .reviews__items .rev__item .subscribe .subscribe__text .sub__title {
-        line-height: 153%;
-    }
-    
-    .reviews__items .rev__item .subscribe .subscribe__text .sub__subtitle {
-        font-size: 14px;
-        line-height: 153%;
-    }
-
-    .reviews__items .rev__back {
-        width: auto;
-        height: 550px;
-        margin: 0 -420px;
-    }
-
-    .reviews__items .rev__item {
-        gap: 59px;
-    }
-
-    .reviews__items .rev__item .subscribe {
-        gap: 22px;
-    }
-
-    .features__items {
-        gap: 47px;
-    }
-
-    .features__items .feature:last-child {
-        padding-bottom: 81px;
+        .rights {
+            padding-bottom: 24px;
+        }
     }
 }
