--- a/hw_8/style.css
+++ b/hw_8/style.css
@@ -177,7 +177,7 @@ body {
   box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
   padding-left: 16px;
   padding-right: 16px;
-  width: 100%;
+  width: 360px;
   box-sizing: border-box;
 }
 .sort__filter__items .filter__item .filter[open] .filter__title {
@@ -254,18 +254,18 @@ body {
 .sort__filter__items .filter__item .filter__category__items .filter__link:hover {
   color: #EF5B70;
 }
-.sort__filter .sort {
+.sort__filter__items .sort {
   display: flex;
   gap: 28px;
   padding-top: 51px;
 }
-.sort__filter .sort__items {
+.sort__filter__items .sort__items {
   position: relative;
 }
-.sort__filter .sort__items[open] path {
+.sort__filter__items .sort__items[open] path {
   fill: #EF5B70;
 }
-.sort__filter .sort__items .sort__summary {
+.sort__filter__items .sort__items .sort__summary {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -275,13 +275,13 @@ body {
   font-weight: 400;
   line-height: normal;
 }
-.sort__filter .sort__items .sort__summary:hover {
+.sort__filter__items .sort__items .sort__summary:hover {
   cursor: pointer;
 }
-.sort__filter .sort__items .sort__summary:hover path {
+.sort__filter__items .sort__items .sort__summary:hover path {
   fill: #EF5B70;
 }
-.sort__filter .sort__items .sort__item__category {
+.sort__filter__items .sort__items .sort__item__category {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -294,7 +294,7 @@ body {
   top: 25px;
   left: -9px;
 }
-.sort__filter .sort__items .sort__item__category .sort__link {
+.sort__filter__items .sort__items .sort__item__category .sort__link {
   text-decoration: none;
   color: #6F6E6E;
   font-size: 14px;
@@ -302,10 +302,10 @@ body {
   font-weight: 400;
   line-height: normal;
 }
-.sort__filter .sort__items .sort__item__category .sort__link:hover {
+.sort__filter__items .sort__items .sort__item__category .sort__link:hover {
   color: #EF5B70;
 }
-.sort__filter .sort__items .sort__item__category .sort__label {
+.sort__filter__items .sort__items .sort__item__category .sort__label {
   color: #6F6E6E;
   font-size: 14px;
   font-style: normal;
@@ -314,7 +314,7 @@ body {
   display: flex;
   gap: 9px;
 }
-.sort__filter .sort__items .sort__item__category .sort__label input:hover {
+.sort__filter__items .sort__items .sort__item__category .sort__label input:hover {
   cursor: pointer;
 }
 
@@ -458,6 +458,46 @@ body {
   transform: scale(0.95);
 }
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 97px;
+}
+.pagination .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 19px;
+  list-style: none;
+  width: 283px;
+  height: 41px;
+  border: 1px solid #EBEBEB;
+  border-radius: 4px;
+}
+.pagination .page__btn {
+  display: flex;
+}
+.pagination .page__btn:hover {
+  cursor: pointer;
+}
+.pagination .page__btn:hover path {
+  fill: #EF5B70;
+}
+.pagination .page__number {
+  color: #C4C4C4;
+}
+.pagination .page__number a {
+  text-decoration: none;
+  color: #C4C4C4;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.pagination .page__number a:hover {
+  color: #EF5B70;
+}
+
 .features__items {
   display: flex;
   justify-content: center;
@@ -491,46 +531,6 @@ body {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
-}
-
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 97px;
-}
-.pagination .page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 19px;
-  list-style: none;
-  width: 283px;
-  height: 43px;
-  border: 1px solid #EBEBEB;
-  border-radius: 4px;
-}
-.pagination .page__btn {
-  display: flex;
-}
-.pagination .page__btn:hover {
-  cursor: pointer;
-}
-.pagination .page__btn:hover path {
-  fill: #EF5B70;
-}
-.pagination .page__number {
-  color: #C4C4C4;
-}
-.pagination .page__number a {
-  text-decoration: none;
-  color: #C4C4C4;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-}
-.pagination .page__number a:hover {
-  color: #EF5B70;
 }
 
 .reviews__items {
@@ -686,4 +686,184 @@ input::-webkit-input-placeholder {
 }
 .link:hover path {
   fill: white;
+}
+
+@media (max-width: 1024px) {
+  .header__inner {
+    height: 74px;
+    gap: 55%;
+  }
+  .page__nav {
+    gap: 43.4%;
+  }
+  .sort__filter__items {
+    width: 736px;
+    gap: 80px;
+  }
+  .sort__filter__items .filter__item {
+    height: 81px;
+  }
+  .sort__filter__items .filter__item .filter {
+    top: 11px;
+  }
+  .sort__filter__items .sort {
+    padding-top: 24px;
+  }
+  .sort__filter__items .sort .sort__items:first-child {
+    width: 132px;
+  }
+  .items {
+    margin-bottom: 41px;
+  }
+  .items .items__wrap {
+    grid-gap: 16px;
+  }
+  .items .items__wrap .item:last-child {
+    display: none;
+  }
+  .pagination {
+    margin-bottom: 64px;
+  }
+  .features__items {
+    flex-direction: column;
+    gap: 49px;
+  }
+  .features__items .feature {
+    padding: 0;
+  }
+  .features__items .feature:first-child {
+    padding-top: 48px;
+  }
+  .features__items .feature:last-child {
+    padding-bottom: 64px;
+  }
+  .reviews__items {
+    width: 100%;
+    height: 614px;
+  }
+  .reviews__items .rev__back {
+    width: auto;
+    height: 693px;
+    margin: 0 -420px;
+  }
+  .reviews__items .rev__item {
+    flex-direction: column;
+    align-items: center;
+    gap: 75px;
+  }
+  .reviews__items .rev__item .feedback {
+    padding-top: 64px;
+  }
+  .reviews__items .rev__item .subscribe {
+    padding-top: 0;
+    gap: 27px;
+  }
+  .reviews__items .rev__item .subscribe .subscribe__text .sub__title {
+    line-height: 162%;
+  }
+  .reviews__items .rev__item .subscribe .subscribe__text .sub__subtitle {
+    line-height: 162%;
+  }
+  .footer__inner {
+    gap: 305px;
+  }
+  .footer__inner .rights {
+    width: 251px;
+  }
+}
+@media (max-width: 767px) {
+  .header__inner {
+    gap: 53%;
+  }
+  .login {
+    display: none;
+  }
+  .basket {
+    display: none;
+  }
+  .page__nav {
+    flex-direction: column;
+    gap: 21.6%;
+    justify-content: initial;
+  }
+  .page__nav .current__page {
+    width: auto;
+    padding-top: 24px;
+  }
+  .sort__filter__items {
+    width: 360px;
+  }
+  .sort__filter__items .filter__item .filter__summary {
+    gap: 0px;
+  }
+  .sort__filter__items .filter__item .filter__summary .filter__title {
+    display: none;
+  }
+  .sort__filter__items .filter__item .filter__summary svg {
+    width: 37.5px;
+    height: 25px;
+  }
+  .sort__filter__items .sort {
+    gap: 24px;
+  }
+  .sort__filter__items .sort .sort__items .sort__summary {
+    font-size: 12px;
+  }
+  .sort__filter__items .sort .sort__items .sort__item__category {
+    width: 60px;
+  }
+  .sort__filter__items .sort .sort__items:first-child {
+    width: 116px;
+  }
+  .items .items__wrap {
+    grid-template-columns: repeat(1, 360px);
+  }
+  .features__items {
+    gap: 47px;
+  }
+  .features__items .feature:last-child {
+    padding-bottom: 81px;
+  }
+  .reviews__items {
+    height: 550px;
+  }
+  .reviews__items .rev__back {
+    height: 550px;
+  }
+  .reviews__items .rev__item {
+    gap: 59px;
+  }
+  .reviews__items .rev__item .feedback .feedback__text {
+    font-size: 18px;
+  }
+  .reviews__items .rev__item .feedback .feedback__text .text__ital {
+    font-size: 18px;
+  }
+  .reviews__items .rev__item .subscribe {
+    gap: 22px;
+  }
+  .reviews__items .rev__item .subscribe .review__btn {
+    width: 341px;
+    height: 47px;
+  }
+  .reviews__items .rev__item .subscribe .review__btn .subscribe__button .sub__button {
+    width: 96px;
+    height: 47px;
+  }
+  .reviews__items .rev__item .subscribe .subscribe__text .sub__title {
+    line-height: 153%;
+  }
+  .reviews__items .rev__item .subscribe .subscribe__text .sub__subtitle {
+    font-size: 14px;
+    line-height: 153%;
+  }
+  .footer__inner {
+    flex-direction: column-reverse;
+    gap: 40px;
+    height: 143px;
+    justify-content: normal;
+  }
+  .footer__inner .rights {
+    padding-bottom: 24px;
+  }
 }/*# sourceMappingURL=style.css.map */
