--- a/hw_9/helper/media_1024.scss
+++ b/hw_9/helper/media_1024.scss
@@ -5,136 +5,96 @@
         gap: 55%;
     }
 
-    .description .description__text .main__title .title {
-        font-size: 44px;
+    .page__nav {
+        margin-bottom: 59px;
+
+        .current__page {
+            padding-left: 2.1%;
+        }
     }
+
+    .description__cart {
+        gap: 64px;
+        flex-wrap: wrap;
+
+        &__products {
+            width: 734px;
     
-    .description .description__text .main__title .lux {   
-        font-size: 24px;
-    }
+            &-items {
+                margin-bottom: 62px;
+            }
     
-    .description .description__text .main__title .lux .fashion {
-        font-size: 24px;
-    }
+            &-buttons {
+                justify-content: center;
+                gap: 48px;
+            }
+        }
 
-    .description .description__text .rect {
-        height: 92px;
-    }
+        &__purchase {
+            flex-direction: initial;
+            width: 734px;
+            gap: 15px;
 
-    .description .description__text {
-        width: 311px;
-        height: 92px;
-    }
+            form {
+                width: 360px;
 
-    .description .description__img {
-        padding-right: 5%;
-    }
+                label {
+                    h2 {
+                        margin-top: auto;
+                    }
+                }
+            }
 
-    .products .prod__items .products__little__one {
-        width: 232px;
-        height: 168px;
-    }
-    
-    .products .prod__items .products__little__two {
-        width: 232px;
-        height: 168px;
-    }
-    
-    .products .prod__items .products__little__three {
-        width: 232px;
-        height: 168px;
-    }
-
-    .products .prod__items .products__big {
-        width: 735px;
-        height: 116px;
-    }
-
-    .products {
-        padding-left: calc(50% - 368px);
-        padding-right: calc(50% - 368px);
-        margin-bottom: 110px;
-    }
-
-    .products .prod__items {
-        grid-gap: 19px;
-    }
-
-    .featured__items__text {
-        gap: 3.3px;
-        margin-bottom: 73px;
-    }
-
-    .items {
-        padding-left: calc(50% - 368px);
-        padding-right: calc(50% - 368px);
-        margin-bottom: 33px;
-    }
-
-    .items .items__wrap {
-        grid-gap: 16px;
-    }
-
-    .items__button {
-        margin-bottom: 65px;
-    }
-
-    .features__items {
-        flex-direction: column;
-        gap: 49px;
-    }
-
-    .features__items .feature {
-        padding: 0;
-    }
-
-    .features__items .feature:first-child {
-        padding-top: 48px;
-    }
-
-    .features__items .feature:last-child {
-        padding-bottom: 64px;
-    }
-
-    .reviews__items .rev__back {
-        width: auto;
-        height: 693px;
-        margin: 0 -420px;
+            &-payment {
+                width: 360px;
+                margin-top: 39px;
+            }
+        }
     }
 
     .reviews__items {
         width: 100%;
         height: 614px;
-    }
 
-    .reviews__items .rev__item {
-        flex-direction: column;
-        align-items: center;
-        gap: 75px;
-    }
+        .rev__back {
+            width: auto;
+            height: 693px;
+            margin: 0 -420px;
+        }
 
-    .reviews__items .rev__item .feedback {
-        padding-top: 64px;
-    }
+        .rev__item {
+            flex-direction: column;
+            align-items: center;
+            gap: 75px;
 
-    .reviews__items .rev__item .subscribe {
-        padding-top: 0;
-        gap: 27px;
+            .feedback {
+                padding-top: 64px;
+            }
+
+            .subscribe {
+                padding-top: 0;
+                gap: 27px;
+
+                .subscribe__text {
+
+                    .sub__title {
+                        line-height: 162%;
+                    }
+
+                    .sub__subtitle {
+                        line-height: 162%;
+                    }
+                }
+            }
+        }
+    
     }
 
     .footer__inner {
         gap: 305px;
-    }
 
-    .footer__inner .rights {
-        width: 251px;
-    }
-
-    .reviews__items .rev__item .subscribe .subscribe__text .sub__title {
-        line-height: 162%;
-    }
-    
-    .reviews__items .rev__item .subscribe .subscribe__text .sub__subtitle {
-        line-height: 162%;
-    }
+        .rights {
+            width: 251px;
+        }
+    }    
 }
